--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ header, footer{
 
 }
 header nav {
-    padding-top: 15px;
+    padding-top: 0px;
     margin-right: 20px;
     float: right;
     font-size: 20px;
@@ -50,6 +50,9 @@ header nav ul li {
 }
 nav li a {
     color: #ffffff;
+}
+nav li a:hover{
+    color: aqua;
 }
 
 /*nav ul {
@@ -85,14 +88,25 @@ section.about_me{
 img{
     width: 200px;
     border: 1px solid salmon;
+    display: block;
+    margin: auto;
+
+}
+img:hover{
+    transform: rotate(10deg);
+    width: 300px;
 
 }
 
 .abir{
     float: left;
 }
-.art{
-    float: right;
+.ab{
+margin: auto;
+text-align: center;
+float: left;
+display: block;
+
 }
 footer{
     text-align: center;
